  - added new FHEM command 'msg' to introduce integrated message routing functionality

- Fri Nov 13 2015 (loredo)
  - added new module 50_HP1000

- Sat Nov 14 2015 (mattwire)
  - added new module 98_ping to allow easy ping checks for devices
  
- Mon Nov 16 2015 (telekatz)
  - added new module 10_DUOFERNSTICK
  - added new module 30_DUOFERN

- Sun Nov 29 2015 (DS_Starter)
  - added new module 49_SSCam to trigger records of cameras within Synology Surveillance Station

- Sun Dec 06 2015 (Benni)
  - added new module 98_rssFeed to get data from rss news feeds
  
- Wed Dec 23 2015 (chris1284)
  - added new function for running terms
  - improved commandref

- Wed Dec 23 2015 (risiko)
  - added new module 98_weekprofile to manage week profiles
  
- Sun Jan 31 2016 (markus-m)
  - added new module 60_allergy to provide allergy forecast data for Germany

- Mon Mar 30 2016 (yoda_gh)
  - added new module 52_I2C_K30 supporting the SenseAir K-30 CO2 sensor

- Sun May 22 2016 (loredo)
  - rewrite of ONKYO_AVR module based on IODev for real-time updates
  - separate ONKYO_AVR_ZONE module to support separate zone devices for ONKYO_AVR; users will need to manually delete old ONKYO_AVR definitions who where just used for a specific zone and have them re-created based on ONKYO_AVR_ZONE

- Sun May 29 2016 (arnoaugustin)
  - added new module 52_I2C_BH1750 for i2c BH1750 light sensor

- Wed Aug 03 2016 (deespe)
  - added new module 98_Hyperion for Hyperion server

- Sun Aug 21 2016 (mike3436)
  - added new module 26_KM273 for buderus logatherm heat pump

- Mon Aug 22 2016 (loredo)
  - added new command exportdevice

- Mon Sep 12 2016 (zap)
  - added modules 88_HMCCU, 88_HMCCUCHN, 88_HMCCUDEV HMCCUConf for interface FHEM - Homematic CCU2

- Sat Oct 1 2016 (Christian.Kühnel)
  - added new module 99_Venetian

- Fri Oct 7 2016 (jmike)
  - adding new module 98_TRAFFIC